# Fall-Detection-Model-Internship2

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  AirflowREADME.md  Dockerfile  Makefile  README.md  cdk.json  data1.csv  data43.csv  docker-compose.yml  fall_sequence_2024-02-27T20-40-21.603488.csv  fall_sequence_2024-02-27T20-40-52.727644.csv  fall_sequence_2024-02-27T20-41-34.381473.csv  fall_sequence_2024-02-27T20-41-50.790329.csv  fall_sequence_2024-02-27T20-43-02.061430.csv  fall_sequence_2024-02-27T20-43-21.168693.csv  fall_sequence_2024-02-27T20-43-47.960557.csv  fall_sequence_2024-02-27T20-44-03.409812.csv  fall_sequence_2024-02-27T20-44-23.733559.csv  fall_sequence_2024-02-27T20-44-35.901803.csv  fall_sequence_2024-02-27T20-44-45.490961.csv  fall_sequence_2024-02-27T20-44-59.559661.csv  fall_sequence_2024-02-27T20-45-15.219753.csv  fall_sequence_2024-02-27T20-45-54.720267.csv  fall_sequence_2024-02-27T20-46-25.783663.csv  fall_sequence_2024-02-27T20-47-09.292520.csv  fall_sequence_2024-02-27T20-47-34.265529.csv  fall_sequence_2024-02-27T20-47-56.764015.csv  fall_sequence_2024-02-27T20-48-07.700511.csv  fall_sequence_2024-02-27T20-48-18.132679.csv  fall_sequence_2024-02-27T20-50-25.641785.csv  fall_sequence_2024-02-27T20-50-29.855029.csv  fall_sequence_2024-02-27T20-52-01.931369.csv  fall_sequence_2024-02-27T20-53-05.002172.csv  fall_sequence_2024-02-27T20-53-18.132757.csv  fall_sequence_2024-02-27T20-53-24.679868.csv  fall_sequence_2024-02-27T20-53-52.561026.csv  pass-role-policy.json  pyproject.toml  (+2 more)
dags/: dag_gm_pipeline.py
data/processed/: processed_data1.csv  processed_data2.csv  processed_data3.csv  processed_data4.csv  processed_data5.csv  processed_data6.csv  processed_data7.csv
data/raw/: data1.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data7.csv
hyperparameters/: best_params.json
notebooks/: eda_elias.ipynb  test.ipynb
src/gui/: annotation.py  data_ui.py  demo_widget.py  gui.py  (+2 more)
tests/: test_motion_feature_calculator.py
(+35 files in other folders)
